--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/open-sans": "^5.0.6",
     "@fontsource/raleway": "^5.0.6",
+    "axios": "^1.5.0",
+    "cors": "^2.8.5",
     "framer-motion": "^10.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
